--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+/* Estilo global */
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #1e1e1e;
+  color: white;
+  font-family: 'Segoe UI', sans-serif;
+}
