adicionando lista dos itens

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -43,5 +43,5 @@
     </section>
 
     <!-- BOTÃO FLUTUANTE -->
-    <button class="botao-flutuante">+</button>
+    <button class="fab" (click)="irParaNovaConta()">+</button>
 </div>
