--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -31,7 +31,6 @@
         <p><span>Despesas a pagar</span><span>{{ dados.aPagar | currency:'BRL' }}</span></p>
         <p><span>Despesas fixas</span><span>{{ dados.despesasFixas | currency:'BRL' }}</span></p>
         <p><span>Despesas variáveis</span><span>{{ dados.despesasVariaveis | currency:'BRL' }}</span></p>
-        <p><span>Cartão de crédito</span><span>{{ dados.cartaoCredito | currency:'BRL' }}</span></p>
         <p><span>Prestações</span><span>{{ dados.prestacoes | currency:'BRL' }}</span></p>
     </section>
 
@@ -43,5 +42,5 @@
     </section>
 
     <!-- BOTÃO FLUTUANTE -->
-    <button class="fab" (click)="irParaNovaConta()">+</button>
+    <button class="botao-flutuante" routerLink="/nova-conta">+</button>
 </div>
