--- a/src/app/despesas-detalhe/despesas-detalhe.html
+++ b/src/app/despesas-detalhe/despesas-detalhe.html
@@ -31,6 +31,6 @@
   <app-modal-opcoes *ngIf="mostrarModal" (escolha)="aoSelecionarOpcao($event)">
   </app-modal-opcoes>
 
-  <button class="fab">+</button>
+  <button class="fab" routerLink="/nova-conta">+</button>
 
 </div>
