--- a/src/app/receitas-detalhe/receitas-detalhe.html
+++ b/src/app/receitas-detalhe/receitas-detalhe.html
@@ -16,7 +16,7 @@
   </nav>
 
   <main>
-    <div class="despesa" *ngFor="let item of despesas">
+    <div class="despesa" *ngFor="let item of despesas" (click)="abrirModal(item)">
       <div class="data">{{ item.data }}</div>
       <div class="info">
         <div>
@@ -28,5 +28,8 @@
     </div>
   </main>
 
-  <button class="fab">+</button>
+  <app-modal-opcoes *ngIf="mostrarModal" (escolha)="aoSelecionarOpcao($event)">
+  </app-modal-opcoes>
+
+  <button class="fab" routerLink="/nova-conta">+</button>
 </div>
