--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -11,10 +11,10 @@
     <router-outlet></router-outlet>
 
     <nav class="navegacao">
-        <button (click)="selecionarMes('JUN/25')" [class.ativo]="mesSelecionado === 'JUN/25'">JUN/25</button>
-        <button (click)="selecionarMes('JUL/25')" [class.ativo]="mesSelecionado === 'JUL/25'">JUL/25</button>
-        <button (click)="selecionarMes('AGO/25')" [class.ativo]="mesSelecionado === 'AGO/25'">AGO/25</button>
-        <button disabled style="opacity: 0.4;">SET/25</button>
+        <button (click)="selecionarMes('JUL/25')" [class.ativo]="mesSelecionado === 'JUL/25'">JUN/25</button>
+        <button (click)="selecionarMes('AGO/25')" [class.ativo]="mesSelecionado === 'AGO/25'">JUL/25</button>
+        <button (click)="selecionarMes('SET/25')" [class.ativo]="mesSelecionado === 'SET/25'">AGO/25</button>
+        <button disabled style="opacity: 0.4;">OUT/25</button>
     </nav>
 
     <!-- RECEITAS -->
