--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -36,8 +36,8 @@
 
     <!-- SALDO -->
     <section class="bloco saldo">
-        <h2>SALDO ATUAL <span>{{ dados.saldo | currency:'BRL' }}</span></h2>
-        <p><span>Saldo mês atual</span><span>{{ dados.saldoAtual | currency:'BRL' }}</span></p>
+        <h2>SALDO ATUAL <span>{{ dados.saldoAtual | currency:'BRL' }}</span></h2>
+        <p><span>Saldo mês atual</span><span>{{ dados.saldoMesAtual | currency:'BRL' }}</span></p>
     </section>
 
     <!-- BOTÃO FLUTUANTE -->
