--- a/src/app/nova-conta/nova-conta.html
+++ b/src/app/nova-conta/nova-conta.html
@@ -1,7 +1,7 @@
 <div class="nova-conta-wrapper">
   <div class="card">
     <header class="card-header" [class.header-vermelho]="novaConta.tipo === 'despesa'" [class.header-azul]="novaConta.tipo === 'receita'">
-      <button class="btn-fechar">✕</button>
+      <button type="button" class="btn-fechar" (click)="fecharModal()">✕</button>
       <h3 class="card-title">Nova Conta</h3>
       <button class="btn-criar">SALVAR</button>
     </header>
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row" *ngIf="novaConta.tipo !== 'receita'">
         <div class="col-6">
           <label class="input-label">Tipo da transação</label>
           <select class="select" [(ngModel)]="novaConta.tipoTransacao" name="tipoTransacao">
@@ -47,7 +47,6 @@
             <option>Cartão de crédito</option>
             <option>Despesa fixa</option>
             <option>Despesa variável</option>
-            <option>Prestação</option>
           </select>
         </div>
         <div class="col-6">
@@ -82,8 +81,6 @@
       </div>
 
       <div class="form-actions">
-       
-        <button type="button" class="btn btn-primary">Salvar</button>
       </div>
     </form>
   </div>
