--- a/src/app/nova-conta/nova-conta.html
+++ b/src/app/nova-conta/nova-conta.html
@@ -3,7 +3,7 @@
     <header class="card-header" [class.header-vermelho]="novaConta.tipoConta === 'despesa'" [class.header-azul]="novaConta.tipoConta === 'receita'">
       <button type="button" class="btn-fechar" (click)="fecharModal()">✕</button>
       <h3 class="card-title">Nova Conta</h3>
-      <button class="btn-criar">SALVAR</button>
+      <button class="btn-criar" type="button" (click)="salvarNovaConta()">SALVAR</button>
     </header>
 
     <form class="formulario">
@@ -44,23 +44,23 @@
           <label class="input-label">Tipo da transação</label>
           <select class="select" [(ngModel)]="novaConta.tipoPagamento" name="tipoPagamento">
             <option value="">Selecione</option>
-            <option>Cartão de crédito</option>
-            <option>Despesa fixa</option>
-            <option>Despesa variável</option>
+            <option value="CARTAO_CREDITO">Cartão de crédito</option>
+            <option value="FIXA">Despesa fixa</option>
+            <option value="VARIAVEL">Despesa variável</option>
           </select>
         </div>
         <div class="col-6">
           <label class="input-label">Categoria</label>
           <select class="select" [(ngModel)]="novaConta.categoria" name="categoria">
             <option value="">Selecione</option>
-            <option>Alimentação</option>
-            <option>Educação</option>
-            <option>Lazer</option>
-            <option>Moradia</option>
-            <option>Saúde</option>
-            <option>Transporte</option>
-            <option>Vestuário</option>
-            <option>Outros</option>
+            <option value="ALIMENTACAO">Alimentação</option>
+            <option value="EDUCACAO">Educação</option>
+            <option value="LAZER">Lazer</option>
+            <option value="MORADIA">Moradia</option>
+            <option value="SAUDE">Saúde</option>
+            <option value="TRANSPORTE">Transporte</option>
+            <option value="VESTUARIO">Vestuário</option>
+            <option value="OUTROS">Outros</option>
           </select>
         </div>
       </div>
@@ -70,10 +70,10 @@
           <label class="input-label">Repetir</label>
           <select class="select" [(ngModel)]="novaConta.repeticao" name="repetir">
             <option value="">Selecione</option>
-            <option>Diariamente</option>
-            <option>Mensalmente</option>
-            <option>Semanalmente</option>
-            <option>Anualmente</option>
+            <option value="DIARIAMENTE">Diariamente</option>
+            <option value="MENSALMENTE">Mensalmente</option>
+            <option value="SEMANALMENTE">Semanalmente</option>
+            <option value="ANUALMENTE">Anualmente</option>
           </select>
         </div>
 
